# nyc-tlc-analytics-warehouse

./: .env.example  .gitignore  Makefile  README.md  bootstrap_new_machine.ps1  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: dbt-ci.yml
airflow/dags/: nyc_tlc_pipeline_dag.py
dbt/: Dockerfile  dbt_project.yml  profiles.yml
dbt/models/aggregations/: agg_brand_performance.sql  agg_cart_abandonment.sql  agg_funnel_by_category.sql  agg_hourly_traffic.sql  schema.yml
dbt/models/dimensions/: dim_date.sql  dim_product.sql  dim_session.sql  dim_user.sql  schema.yml
dbt/models/facts/: fct_event.sql  schema.yml
dbt/models/staging/: schema.yml  stg_events.sql
docs/: architecture.md  dashboard_blueprint.md
scripts/: backfill_to_bigquery_from_gcs.py  dashboard_views.sql  deploy_to_composer.ps1  download_data.py  load_to_bigquery.py  prod_run_composer.ps1  trigger_composer_dag.ps1  upload_to_gcs.py
spark/: transform_events.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_project_structure.py
